year is a reserved keyword and cannot be used as an identifier for a database column

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# Database
+spring.h2.console.enabled=true
+spring.h2.console.path = /h2
 
+spring.datasource.url=jdbc:h2:mem:footballSystemDB
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=hej
+spring.datasource.password=123
+
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.sql.init.platform=h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
