added Swagger documentation to the Spring Boot application.In addition, new GET and POST methods have been added to MatchController PlayerController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+#http://localhost:8080/swagger-ui/index.html
 # Database
+server.port =8080
 spring.h2.console.enabled=true
 spring.h2.console.path = /h2
+
 
 spring.datasource.url=jdbc:h2:mem:footballSystemDB
 spring.datasource.driver-class-name=org.h2.Driver
