--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path = /h2
 
 
-spring.datasource.url=jdbc:h2:mem:footballSystemDB
+spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=hej
-spring.datasource.password=123
+spring.datasource.username=sa
+
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
